src/test/ui/unsafe/unsafe-fn-called-from-safe.stderr
error[E0133]: call to unsafe function is unsafe and requires unsafe function or block
  --> $DIR/unsafe-fn-called-from-safe.rs:4:5
   |
LL |     f();
   |     ^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

error: aborting due to previous error

For more information about this error, try `rustc --explain E0133`.
